Fri Oct  8 10:52:25 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* common.mk (RBCONFIG): depends on version.h due to
	  RUBY_PATCHLEVEL.  [ruby-core:32709]

Fri Oct  8 00:24:54 2010  James Edward Gray II  <jeg2@ruby-lang.org>

	* lib/csv.rb: Fixing documentation typos.  [ruby-core:32712]

Thu Oct  7 09:14:28 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* vm_exec.c (vm_exec_core):  Treat clang as non gcc on this
	  context: It has __asm__ but doesn't works well.

Wed Oct  6 12:28:22 2010  Tanaka Akira  <akr@fsij.org>

	* lib/uri/generic.rb (URI::Generic#hostname): new method.
	  (URI::Generic#hostname=): ditto.

	* lib/open-uri.rb: use URI#hostname

	* lib/net/http.rb: ditto.

	  reported by Adam Majer.  [ruby-core:32056]

Wed Oct  6 11:52:12 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* io.c (fptr_finalize): write_mutex might have been destroyed
	  already in finalization phase, as the order of finalizers is not
	  guaranteed.  rb_mutex_t should be used in place of Mutex object
	  in the future.

Tue Oct  5 22:17:02 2010  wanabe  <s.wanabe@gmail.com>

	* win32/mkexports.rb: revert r29320 and r29402.

Mon Oct  4 12:43:47 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (regexp): dregexp has literal string only at the head
	  and successors are array.  [ruby-core:32682]

Mon Oct  4 10:22:21 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rand_init): This checks the value is in 32bit or not,
	  so use int32_t, not int.

Mon Oct  4 09:47:39 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* random.c (rand_init): remove useless assignment.

	* re.c (update_char_offset): remove unused variable.

	* re.c (read_escaped_byte): ditto.

Mon Oct  4 09:30:42 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/openssl/lib/openssl/bn.rb (Integer#to_bn): OpenSSL::BN.new
	  accepts only Strings, so call Integer#to_s(16).
	  16 is for an optimization. [ruby-dev:42336]

Mon Oct  4 07:57:51 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* cont.c (fiber_memsize): Return size.